--- a/index.html
+++ b/index.html
@@ -1311,19 +1311,21 @@
 
                 // 2. TASBIH
                 { type: 'text', text: '2. Recite Tasbih', style: 'font-bold text-center mb-2' },
-                { type: 'arabic-indopak', text: 'سُبْحَانَ اللهِ وَ الْحَمْدُ لِلّٰهِ وَ لَا اِلٰهَ اِلَّا اللهُ وَ اللهُ اَكْبَرُ ۞ وَ لَا حَوْلَ وَ لَا قُوَّةَ اِلَّا بِاللهِ الْعَلِيِّ الْعَظِيْمِ', style: 'text-center text-2xl leading-loose text-[#800080]' },
+                { type: 'arabic-indopak', text: 'سُبْحٰنَ اللهِ وَ الْحَمْدُ لِلّٰهِ وَ لَا اِلٰهَ اِلَّا اللهُ وَ اللهُ اَكْبَرُ ۞ وَ لَا حَوْلَ وَ لَا قُوَّةَ اِلَّا بِاللهِ الْعَلِيِّ الْعَظِيْمِ', style: 'text-center text-2xl leading-loose text-[#800080]' },
                 { type: 'text', text: 'Subhan-Allahi Wal-Hamdulillahi Walaa\'elaha e\'lAllahu Wallahu Akbar, Wala hawla Wala Quwwata Ella-Billahil Aliyyil Azeem', style: 'text-center text-sm mt-2 opacity-80' },
                 { type: 'hr' },
 
-                // 3. ALAM NASHRAH
+                // 3. ALAM NASHRAH (BISMILLAH SEPARATED)
                 { type: 'text', text: '3. Surah Alam Nashrah', style: 'font-bold text-center mb-2' },
-                { type: 'arabic-indopak', text: 'بِسْمِ اللَّهِ الرَّحْمٰنِ الرَّحِيْمِ\nاَلَمْ نَشْرَحْ لَكَ صَدْرَكَ ۙ وَ وَضَعْنَا عَنْكَ وِزْرَكَ ۙ الَّذِىْ اَنْقَضَ ظَهْرَكَ ۙ وَ رَفَعْنَا لَكَ ذِكْرَكَ ۗ فَاِنَّ مَعَ الْعُسْرِ يُسْرًا ۙ اِنَّ مَعَ الْعُسْرِ يُسْرًا ۗ فَاِذَا فَرَغْتَ فَانْصَبْ ۙ وَ اِلٰى رَبِّكَ فَارْغَبْ', style: 'text-center text-2xl leading-loose text-[#b91c1c]' },
+                { type: 'arabic-indopak', text: 'بِسْمِ اللَّهِ الرَّحْمٰنِ الرَّحِيْمِ', style: 'text-center text-2xl leading-loose text-[#b91c1c] mb-2' },
+                { type: 'arabic-indopak', text: 'اَلَمْ نَشْرَحْ لَكَ صَدْرَكَ ۙ وَ وَضَعْنَا عَنْكَ وِزْرَكَ ۙ الَّذِىْ اَنْقَضَ ظَهْرَكَ ۙ وَ رَفَعْنَا لَكَ ذِكْرَكَ ۗ فَاِنَّ مَعَ الْعُسْرِ يُسْرًا ۙ اِنَّ مَعَ الْعُسْرِ يُسْرًا ۗ فَاِذَا فَرَغْتَ فَانْصَبْ ۙ وَ اِلٰى رَبِّكَ فَارْغَبْ', style: 'text-center text-2xl leading-loose text-[#b91c1c]' },
                 { type: 'text', text: 'Alam Nashrah laka sadrak, Wawada\'na anka wizrak... (Recite Full Surah)', style: 'text-center text-sm mt-2 opacity-80' },
                 { type: 'hr' },
 
-                // 4. IKHLAS
+                // 4. IKHLAS (BISMILLAH SEPARATED)
                 { type: 'text', text: '4. Surah Ikhlas', style: 'font-bold text-center mb-2' },
-                { type: 'arabic-indopak', text: 'بِسْمِ اللَّهِ الرَّحْمٰنِ الرَّحِيْمِ\nقُلْ هُوَ اللّٰهُ اَحَدٌ ۚ اَللّٰهُ الصَّمَدُ ۚ لَمْ يَلِدْ ٙ وَ لَمْ يُوْلَدْ ۙ وَ لَمْ يَكُنْ لَّهٗ كُفُوًا اَحَدٌ', style: 'text-center text-2xl leading-loose text-[#b91c1c]' },
+                { type: 'arabic-indopak', text: 'بِسْمِ اللَّهِ الرَّحْمٰنِ الرَّحِيْمِ', style: 'text-center text-2xl leading-loose text-[#b91c1c] mb-2' },
+                { type: 'arabic-indopak', text: 'قُلْ هُوَ اللّٰهُ اَحَدٌ ۚ اَللّٰهُ الصَّمَدُ ۚ لَمْ يَلِدْ ٙ وَ لَمْ يُوْلَدْ ۙ وَ لَمْ يَكُنْ لَّهٗ كُفُوًا اَحَدٌ', style: 'text-center text-2xl leading-loose text-[#b91c1c]' },
                 { type: 'text', text: 'Qul Huwallahu Ahad. Allahus-Samad...', style: 'text-center text-sm mt-2 opacity-80' },
                 { type: 'hr' },
 
@@ -1435,10 +1437,10 @@
                  { type: 'arabic-indopak', text: 'مُرِيدِي هِمْ وَطِبْ وَاشْطَحْ وَغَنِّي ۞ وَافْعَلْ مَا تَشَاءُ فَالِاسْمُ عَالِي', style: 'text-center text-2xl text-[#D4AF37]' },
                  { type: 'text', text: 'Mureedi Him Watib Washtah Waganni ۞ Wa\'if\'al Ma Tashaa\'u Fa\'alismu Aali', style: 'text-center text-xs opacity-70 mb-4' },
 
-                 { type: 'arabic-indopak', text: 'مُرِيدِي لَا تَخَفْ اللهُ رَبِّي ۞ عَطَانِي رِفْعَةً نِلْتُ الْمَعَالِي', style: 'text-center text-2xl text-[#1e3a8a]' },
+                 { type: 'arabic-indopak', text: 'مُرِيدِي لَا تَخَفْ اللهُ رَبِّي ۞ عَطَانِي رِفْعَةً نِلْتُ الْمَعَالِي', style: 'text-center font-arabic text-2xl text-[#1e3a8a]' },
                  { type: 'text', text: 'Mureedi La Takhaf Allahu Rabbi ۞ Ataani Rifatan Niltul Manaali', style: 'text-center text-xs opacity-70 mb-4' },
 
-                 { type: 'arabic-indopak', text: 'طُبُولِي فِي السَّمَاءِ وَالْأَرْضِ دُقَّتْ ۞ وَشَاؤُسُ السَّعَادَةِ قَدْ بَدَا لِي', style: 'text-center text-2xl text-[#D4AF37]' },
+                 { type: 'arabic-indopak', text: 'طُبُولِي فِي السَّمَاءِ وَالْأَرْضِ دُقَّتْ ۞ وَشَاؤُسُ السَّعَادَةِ قَدْ بَدَا لِي', style: 'text-center font-arabic text-2xl text-[#D4AF37]' },
                  { type: 'text', text: 'Tubuli Fis Samaa\'i Walardi Duqqat ۞ Washaa\'oosus Sa\'aadati Qad Badaali', style: 'text-center text-xs opacity-70 mb-4' },
                  
                  { type: 'arabic-indopak', text: 'بِلَادُ اللهِ مُلْكِي تَحْتَ حُكْمِي ۞ وَوَقْتِي قَبْلَ قَلْبِي قَدْ صَفَا لِي', style: 'text-center text-2xl text-[#1e3a8a]' },
@@ -1462,17 +1464,17 @@
                  { type: 'arabic-indopak', text: 'مُرِيدِي لَا تَخَفْ وَاشٍ فَإِنِّي ۞ عَزُومٌ قَاتِلٌ عِنْدَ الْقِتَالِ', style: 'text-center text-2xl text-[#1e3a8a]' },
                  { type: 'text', text: 'Mureedi La Takhaf Wa\' Shin Fa Inni ۞ Azoomun Qaatilun Indal Qitaali', style: 'text-center text-xs opacity-70 mb-4' },
 
-                 { type: 'arabic-indopak', text: 'أَنَا الْجِيلِيُّ مُحْيُ الدِّينِ لَقَبِي ۞ وَأَعْلَامِي عَلَى رَأْسِ الْجِبَالِ', style: 'text-center text-2xl text-[#D4AF37]' },
+                 { type: 'arabic-indopak', text: 'أَنَا الْجِيلِيُّ مُحْيُ الدِّينِ لَقَبِي ۞ وَأَعْلَامِي عَلَى رَأْسِ الْجِبَالِ', style: 'text-center font-arabic text-2xl text-[#D4AF37]' },
                  { type: 'text', text: 'Anal Jeeliyu Muhayudeeni Laqaabi ۞ Wa\'alaami Alaa Ra\'sil Jibaali', style: 'text-center text-xs opacity-70 mb-4' },
 
-                 { type: 'arabic-indopak', text: 'أَنَا الْحَسَنِيُّ وَالْمُخْدَعْ مَقَامِي ۞ وَأَقْدَامِي عَلَى عُنُقِ الرِّجَالِ', style: 'text-center text-2xl text-[#1e3a8a]' },
+                 { type: 'arabic-indopak', text: 'أَنَا الْحَسَنِيُّ وَالْمُخْدَعْ مَقَامِي ۞ وَأَقْدَامِي عَلَى عُنُقِ الرِّجَالِ', style: 'text-center font-arabic text-2xl text-[#1e3a8a]' },
                  { type: 'text', text: 'Anal Hasaniyu Wal Mukhda\' Maqaami ۞ Wa\'aqdaami Alaa Unuqir Rijaali', style: 'text-center text-xs opacity-70 mb-4' },
 
                  { type: 'arabic-indopak', text: 'وَ عَبْدُ الْقَادِرِ الْمَشْهُورُ اِسْمِي ۞ وَ جَدِّي صَاحِبُ الْعَيْنِ الْكَمَالِ', style: 'text-center font-arabic text-2xl text-[#D4AF37]' },
                  { type: 'text', text: 'Wa Abdul Qaadiril Mashooru Ismi ۞ Wa Jaddi Saahibul Aynil Kamaali', style: 'text-center text-xs opacity-70 mb-4' },
                  { type: 'hr' },
 
-                 { type: 'arabic-indopak', text: 'تَقَبَّلْنِي وَلَا تَرُدُّ سُؤَالِي ۞ أَغِثْنِي سَيِّدِي اُنْظُرْ بِحَالِي', style: 'text-center text-2xl text-[#1e3a8a] font-bold' },
+                 { type: 'arabic-indopak', text: 'تَقَبَّلْنِي وَلَا تَرُدُّ سُؤَالِي ۞ أَغِثْنِي سَيِّدِي اُنْظُرْ بِحَالِي', style: 'text-center font-arabic text-2xl text-[#1e3a8a] font-bold' },
                  { type: 'text', text: 'Taqabbalni Wala Tar\'tud Su\'aali ۞ Agithni Sayyidi U\'nzur Bihaali', style: 'text-center text-sm font-bold opacity-90' },
                  { type: 'hr' }
               ]
@@ -1481,7 +1483,6 @@
         }
 
       };
-
 
 
       // ==========================================
