--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             { 
               variant: 'default', 
               content: [ 
-                { type: 'section-title', text: 'Supplications After Salam' }, 
+                { type: 'section-title', text: 'Supplications Before Salam' }, 
                 { type: 'text', text: 'After the Tashahhud and Salawat, one should make a supplication such as:' }, 
                 { type: 'arabic', text: 'اللَّهُمَّ اغْفِرْلِي وَلِوَالِدَيَّ وَلِمَنْ تَوَالَدَ وَلِجَمِيعِ الْمُؤْمِنِينَ وَالْمُؤْمِنَاتِ وَالْمُسْلِمِينَ وَالْمُسْلِمَاتِ الْأَحْيَاءِ مِنْهُمْ وَالْأَمْوَاتِ إِنَّكَ مُجِيبُ الدَّعَوَاتِ بِرَحْمَتِكَ يَا أَرْحَمَ الرَّاحِمِينَ' }, 
                 { type: 'text', text: '"O Allah, forgive me and my parents and all those who are born and all the believing men and women, those who have submitted from the males and females, those of them who are alive and those who have died. Verily, You are the One Who answers prayers... through Your Mercy, O the Most Merciful of those who show mercy."' }, 
@@ -772,7 +772,13 @@
               ]
             },
             {
-              
+              variant: 'default',
+              content: [
+                { type: 'arabic', text: 'اللَّهُمَّ رَبَّ السَّمَوَاتِ وَرَبَّ الأَرْضِ الْعَظِيمِ، رَبَّنَا وَرَبَّ كُلِّ شَىْءٍ، فَالِقَ الْحَبِّ وَالنَّوَى وَمُنْزِلَ التَّوْرَاةِ وَالإِنْجِيلِ وَالْفُرْقَانِ، أَعُوذُ بِكَ مِنْ شَرِّ كُلِّ شَىْءٍ أَنْتَ آخِذٌ بِنَاصِيَتِهِ، اللَّهُمَّ أَنْتَ الأَوَّلُ فَلَيْسَ قَبْلَكَ شَىْءٌ، وَأَنْتَ الآخِرُ فَلَيْسَ بَعْدَكَ شَىْءٌ، وَأَنْتَ الظَّاهِرُ فَلَيْسَ فَوْقَكَ شَىْءٌ، وَأَنْتَ الْبَاطِنُ فَلَيْسَ دُونَكَ شَىْءٌ، اقْضِ عَنَّا الدَّيْنَ وَأَغْنِنَا مِنَ الْفَقْرِ.' },
+                { type: 'text', text: 'O Allah, Lord of the heavens and Lord of the great Throne, our Lord and Lord of everything, Splitter of the seed and the date-stone, Revealer of the Torah, the Gospel, and the Criterion (Qur\'an), I seek refuge in You from the evil of everything You hold by its forelock. O Allah, You are the First, there is nothing before You; and You are the Last, there is nothing after You; and You are the Manifest, there is nothing above You; and You are the Inner, there is nothing beyond You. Relieve us from debt and enrich us from poverty.' }
+              ]
+            },
+            {
               variant: 'default',
               content: [
                 { type: 'arabic', text: 'اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنَ الْكُسَلِ وَالْهَرَمِ وَالْمَأْثَمِ وَالْمَغْرَمِ، وَمِنْ فِتْنَةِ الْقَبْرِ وَعَذَابِ الْقَبْرِ، وَمِنْ فِتْنَةِ النَّارِ وَعَذَابِ النَّارِ، وَمِنْ شَرِّ فِتْنَةِ الْغِنَى، وَأَعُوذُ بِكَ مِنْ فِتْنَةِ الْفَقْرِ، وَأَعُوذُ بِكَ مِنْ فِتْنَةِ الْمَسِيحِ الدَّجَّالِ، اللَّهُمَّ اغْسِلْ عَنِّي خَطَايَايَ بِمَاءِ الثَّلْجِ وَالْبَرَدِ، وَنَقِّ قَلْبِي مِنَ الْخَطَايَا كَمَا نَقَّيْتَ الثَّوْبَ الأَبْيَضَ مِنَ الدَّنَسِ، وَبَاعِدْ بَيْنِي وَبَيْنَ خَطَايَايَ كَمَا بَاعَدْتَ بَيْنَ الْمَشْرِقِ وَالْمَغْرِبِ.' },
@@ -818,7 +824,7 @@
               variant: 'default',
               content: [
                 { type: 'arabic', text: 'رَبِّ اغْفِرْ لِي خَطِيئَتِي وَجَهْلِي وَإِسْرَافِي فِي أَمْرِي كُلِّهِ وَمَا أَنْتَ أَعْلَمُ بِهِ مِنِّي، اللَّهُمَّ اغْفِرْ لِي خَطَايَايَ وَعَمْدِي وَجَهْلِي وَهَزْلِي، وَكُلُّ ذَلِكَ عِنْدِي، اللَّهُمَّ اغْفِرْ لِي مَا قَدَّمْتُ وَمَا أَخَّرْتُ وَمَا أَسْرَرْتُ وَمَا أَعْلَنْتُ أَنْتَ الْمُقَدِّمُ وَأَنْتَ الْمُؤَخِّرُ وَأَنْتَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ.' },
-                { type: 'text', text: 'O Allah, forgive my mistakes, my ignorance, and my extravagance in all my affairs, and what You know better than I do. O Allah, forgive my mistakes, my intentional acts, my ignorance, and my jesting, and all of that is with me. O Allah, forgive me what I have sent forth and what I have held back, and what I have concealed and what I have declared. You are the Advancer and You are the Delayer, and You are over all things competent.' }
+                { type: 'text', text: 'My Lord, forgive my mistakes, my ignorance, and my extravagance in all my affairs, and what You know better than I do. O Allah, forgive my mistakes, my intentional acts, my ignorance, and my jesting, and all of that is with me. O Allah, forgive me what I have sent forth and what I have held back, and what I have concealed and what I have declared. You are the Advancer and You are the Delayer, and You are over all things competent.' }
               ]
             },
             {
@@ -846,28 +852,28 @@
               variant: 'default',
               content: [
                 { type: 'arabic', text: 'غُفْرَانَكَ رَبَّنَا وَإِلَيْكَ الْمَصِيرُ.' },
-                { type: 'text', text: 'Your forgiveness, O Allah, and to You is the final return.' }
+                { type: 'text', text: 'Your forgiveness, our Lord, and to You is the final return.' }
               ]
             },
             {
               variant: 'default',
               content: [
                 { type: 'arabic', text: 'اللَّهُمَّ إِنَّكَ عَفُوٌّ كَرِيمٌ تُحِبُّ الْعَفْوَ فَاعْفُ عَنِّي.' },
-                { type: 'text', text: "O Allah, You are the Forgiver, the Generous. You love forgiveness, so forgive me with Your mercy. }
+                { type: 'text', text: 'O Allah, indeed You are a Pardoner, Generous, You love pardoning, so pardon me.' }
               ]
             },
             {
               variant: 'default',
               content: [
                 { type: 'arabic', text: 'رَبِّ هَبْ لِي مِنْ لَدُنْكَ ذُرِّيَّةً طَيِّبَةً إِنَّكَ سَمِيعُ الدُّعَاءِ.' },
-                { type: 'text', text: 'O Allah, grant me from Your presence a good offspring. Indeed, You are the Hearer of supplication.' }
+                { type: 'text', text: 'My Lord, grant me from Your presence a good offspring. Indeed, You are the Hearer of supplication.' }
               ]
             },
             {
               variant: 'default',
               content: [
                 { type: 'arabic', text: 'رَبَّنَا لاَ تُؤَاخِذْنَا إِنْ نَسِينَا أَوْ أَخْطَأْنَا رَبَّنَا وَلاَ تَحْمِلْ عَلَيْنَا إِصْرًا كَمَا حَمَلْتَهُ عَلَى الَّذِينَ مِنْ قَبْلِنَا رَبَّنَا وَلاَ تُحَمِّلْنَا مَا لاَ طَاقَةَ لَنَا بِهِ وَاعْفُ عَنَّا وَاغْفِرْ لَنَا وَارْحَمْنَا أَنْتَ مَوْلاَنَا فَانْصُرْنَا عَلَى الْقَوْمِ الْكَافِرِينَ.' },
-                { type: 'text', text: 'O Allah, do not impose blame upon us if we forget or err. O Allah, and lay not upon us a burden like that which You laid upon those before us. Our Lord, and burden us not with that which we have no ability to bear. And pardon us; and forgive us; and have mercy upon us. You are our Protector, so grant us victory over the disbelieving people.' }
+                { type: 'text', text: 'Our Lord, do not impose blame upon us if we forget or err. Our Lord, and lay not upon us a burden like that which You laid upon those before us. Our Lord, and burden us not with that which we have no ability to bear. And pardon us; and forgive us; and have mercy upon us. You are our Protector, so grant us victory over the disbelieving people.' }
               ]
             },
             {
