--- a/index.html
+++ b/index.html
@@ -791,13 +791,7 @@
               content: [
                 { type: 'arabic', text: 'اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنَ الْبُخْلِ، وَأَعُوذُ بِكَ مِنَ الْجُبْنِ، وَأَعُوذُ بِكَ مِنْ أَنْ أُرَدَّ إِلَى أَرْذَلِ الْعُمُرِ، وَأَعُوذُ بِكَ مِنْ فِتْنَةِ الدُّنْيَا، وَأَعُوذُ بِكَ مِنْ عَذَابِ الْقَبْرِ.' },
                 { type: 'text', text: 'O Allah, I seek refuge with You from stinginess, and I seek refuge with You from cowardice, and I seek refuge with You from being returned to the most decrepit old age, and I seek refuge with You from the trial of this worldly life, and I seek refuge with You from the torment of the grave.' }
-              ]
-            },
-            {
-              variant: 'default',
-              content: [
-                { type: 'arabic', text: 'اللَّهُمَّ رَبَّ السَّمَوَاتِ وَرَبَّ الأَرْضِ الْعَظِيمِ، رَبَّنَا وَرَبَّ كُلِّ شَىْءٍ، فَالِقَ الْحَبِّ وَالنَّوَى وَمُنْزِلَ التَّوْرَاةِ وَالإِنْجِيلِ وَالْفُرْقَانِ، أَعُوذُ بِكَ مِنْ شَرِّ كُلِّ شَىْءٍ أَنْتَ آخِذٌ بِنَاصِيَتِهِ، اللَّهُمَّ أَنْتَ الأَوَّلُ فَلَيْسَ قَبْلَكَ شَىْءٌ، وَأَنْتَ الآخِرُ فَلَيْسَ بَعْدَكَ شَىْءٌ، وَأَنْتَ الظَّاهِرُ فَلَيْسَ فَوْقَكَ شَىْءٌ، وَأَنْتَ الْبَاطِنُ فَلَيْسَ دُونَكَ شَىْءٌ، اقْضِ عَنَّا الدَّيْنَ وَأَغْنِنَا مِنَ الْفَقْرِ.' },
-                { type: 'text', text: 'O Allah, Lord of the heavens and Lord of the great Throne, our Lord and Lord of everything, Splitter of the seed and the date-stone, Revealer of the Torah, the Gospel, and the Criterion (Qur\'an), I seek refuge in You from the evil of everything You hold by its forelock. O Allah, You are the First, there is nothing before You; and You are the Last, there is nothing after You; and You are the Manifest, there is nothing above You; and You are the Inner, there is nothing beyond You. Relieve us from debt and enrich us from poverty.' }
+             
               ]
             },
             {
@@ -860,14 +854,14 @@
               variant: 'default',
               content: [
                 { type: 'arabic', text: 'رَبِّ هَبْ لِي مِنْ لَدُنْكَ ذُرِّيَّةً طَيِّبَةً إِنَّكَ سَمِيعُ الدُّعَاءِ.' },
-                { type: 'text', text: 'My Lord, grant me from Your presence a good offspring. Indeed, You are the Hearer of supplication.' }
+                { type: 'text', text: 'O Allah, grant me from Your presence a good offspring. Indeed, You are the Hearer of supplication.' }
               ]
             },
             {
               variant: 'default',
               content: [
                 { type: 'arabic', text: 'رَبَّنَا لاَ تُؤَاخِذْنَا إِنْ نَسِينَا أَوْ أَخْطَأْنَا رَبَّنَا وَلاَ تَحْمِلْ عَلَيْنَا إِصْرًا كَمَا حَمَلْتَهُ عَلَى الَّذِينَ مِنْ قَبْلِنَا رَبَّنَا وَلاَ تُحَمِّلْنَا مَا لاَ طَاقَةَ لَنَا بِهِ وَاعْفُ عَنَّا وَاغْفِرْ لَنَا وَارْحَمْنَا أَنْتَ مَوْلاَنَا فَانْصُرْنَا عَلَى الْقَوْمِ الْكَافِرِينَ.' },
-                { type: 'text', text: 'Our Lord, do not impose blame upon us if we forget or err. Our Lord, and lay not upon us a burden like that which You laid upon those before us. Our Lord, and burden us not with that which we have no ability to bear. And pardon us; and forgive us; and have mercy upon us. You are our Protector, so grant us victory over the disbelieving people.' }
+                { type: 'text', text: 'O Allah, do not impose blame upon us if we forget or err. O Allah, and lay not upon us a burden like that which You laid upon those before us. Our Lord, and burden us not with that which we have no ability to bear. And pardon us; and forgive us; and have mercy upon us. You are our Protector, so grant us victory over the disbelieving people.' }
               ]
             },
             {
