--- a/index.html
+++ b/index.html
@@ -650,9 +650,9 @@
                variant: 'default',
                content: [
                   { type: 'section-title', text: 'Entry and Exit' },
-                  { type: 'text', text: 'Our Lord, in the Holy Qur\'an, has asked our Prophet (peace and blessings be upon him) to make the following dua:' },
+                  { type: 'text', text: 'O Allah, in the Holy Qur\'an, has asked our Prophet (peace and blessings be upon him) to make the following dua:' },
                   { type: 'arabic', text: 'رَبِّ أَدْخِلْنِي مُدْخَلَ صِدْقٍ وَأَخْرِجْنِي مُخْرَجَ صِدْقٍ وَاجْعَلْ لِي مِنْ لَدُنْكَ سُلْطَانًا نَصِيرًا' },
-                  { type: 'text', text: '"...My Lord! Grant me to enter with a truthful entry and to exit with a truthful exit, and grant me from Your presence an assisting authority." (Isra Surah 80. Verse)' }
+                  { type: 'text', text: '"...O Allah! Grant me to enter with a truthful entry and to exit with a truthful exit, and grant me from Your presence an assisting authority." (Isra Surah 80. Verse)' }
                ]
             },
             {
@@ -812,7 +812,7 @@
               variant: 'default',
               content: [
                 { type: 'arabic', text: 'رَبِّ اغْفِرْ لِي خَطِيئَتِي وَجَهْلِي وَإِسْرَافِي فِي أَمْرِي كُلِّهِ وَمَا أَنْتَ أَعْلَمُ بِهِ مِنِّي، اللَّهُمَّ اغْفِرْ لِي خَطَايَايَ وَعَمْدِي وَجَهْلِي وَهَزْلِي، وَكُلُّ ذَلِكَ عِنْدِي، اللَّهُمَّ اغْفِرْ لِي مَا قَدَّمْتُ وَمَا أَخَّرْتُ وَمَا أَسْرَرْتُ وَمَا أَعْلَنْتُ أَنْتَ الْمُقَدِّمُ وَأَنْتَ الْمُؤَخِّرُ وَأَنْتَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ.' },
-                { type: 'text', text: 'My Lord, forgive my mistakes, my ignorance, and my extravagance in all my affairs, and what You know better than I do. O Allah, forgive my mistakes, my intentional acts, my ignorance, and my jesting, and all of that is with me. O Allah, forgive me what I have sent forth and what I have held back, and what I have concealed and what I have declared. You are the Advancer and You are the Delayer, and You are over all things competent.' }
+                { type: 'text', text: 'O Allah, forgive my mistakes, my ignorance, and my extravagance in all my affairs, and what You know better than I do. O Allah, forgive my mistakes, my intentional acts, my ignorance, and my jesting, and all of that is with me. O Allah, forgive me what I have sent forth and what I have held back, and what I have concealed and what I have declared. You are the Advancer and You are the Delayer, and You are over all things competent.' }
               ]
             },
             {
@@ -840,7 +840,7 @@
               variant: 'default',
               content: [
                 { type: 'arabic', text: 'غُفْرَانَكَ رَبَّنَا وَإِلَيْكَ الْمَصِيرُ.' },
-                { type: 'text', text: 'Your forgiveness, our Lord, and to You is the final return.' }
+                { type: 'text', text: 'Your forgiveness, O Allah, and to You is the final return.' }
               ]
             },
             {
