--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             { 
               variant: 'default', 
               content: [ 
-                { type: 'section-title', text: 'Supplications Before Salam' }, 
+                { type: 'section-title', text: 'Supplications After Salam' }, 
                 { type: 'text', text: 'After the Tashahhud and Salawat, one should make a supplication such as:' }, 
                 { type: 'arabic', text: 'اللَّهُمَّ اغْفِرْلِي وَلِوَالِدَيَّ وَلِمَنْ تَوَالَدَ وَلِجَمِيعِ الْمُؤْمِنِينَ وَالْمُؤْمِنَاتِ وَالْمُسْلِمِينَ وَالْمُسْلِمَاتِ الْأَحْيَاءِ مِنْهُمْ وَالْأَمْوَاتِ إِنَّكَ مُجِيبُ الدَّعَوَاتِ بِرَحْمَتِكَ يَا أَرْحَمَ الرَّاحِمِينَ' }, 
                 { type: 'text', text: '"O Allah, forgive me and my parents and all those who are born and all the believing men and women, those who have submitted from the males and females, those of them who are alive and those who have died. Verily, You are the One Who answers prayers... through Your Mercy, O the Most Merciful of those who show mercy."' }, 
