--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -344,53 +345,70 @@
      ] 
             } 
           ] 
-        },
-  
-        'p5': { 
-          id: 'p5', 
-          title: 'Prayers after Salah', 
-          cards: [ 
-            { 
-              variant: 'default', 
-              content: [ 
-                { type: 'section-title', text: 'Supplications After Salam' }, 
-                { type: 'text', text: 'After the Tashahhud and Salawat, one should make a supplication such as:' }, 
-                { type: 'arabic', text: 'اللَّهُمَّ اغْفِرْلِي وَلِوَالِدَيَّ وَلِمَنْ تَوَالَدَ وَلِجَمِيعِ الْمُؤْمِنِينَ وَالْمُؤْمِنَاتِ وَالْمُسْلِمِينَ وَالْمُسْلِمَاتِ الْأَحْيَاءِ مِنْهُمْ وَالْأَمْوَاتِ إِنَّكَ مُجِيبُ الدَّعَوَاتِ بِرَحْمَتِكَ يَا أَرْحَمَ الرَّاحِمِينَ' }, 
-                { type: 'text', text: '"O Allah, forgive me and my parents and all those who are born and all the believing men and women, those who have submitted from the males and females, those of them who are alive and those who have died. Verily,     You are the One Who answers prayers... through Your Mercy, O the Most Merciful of those who show mercy."' }, 
-                { type: 'hr' }, 
-                { type: 'text', text: 'Or pray:' }, 
-                { type: 'arabic', text: 'اللَّهُمَّ رَبِّ اجْعَلْنِي مُقِيمَ الصَّلَاةِ وَمِنْ ذُرِّيَّتِي رَبَّنَا وَتَقَبَّلْ دُعَاءِ رَبَّنَا اغْفِرْ لِي وَلِوَالِدَيَّ وَلِلْمُؤْمِنِينَ يَوْمَ يَقُومُ الْحِسَابُ' }, 
-                { type: 'text', text: '"O Allah, my Rab. Make me establish the prayer, and my offspring; O our Lord! Accept my prayer. O Allah! Forgive me, and my parents, and all the believers on the Day when Reckoning will take place."' } 
-              ] 
-            }, 
-            { 
-              variant: 'default', 
-              content: [ 
-                { type: 'section-title', text: 'Comprehensive Dua After Salah' }, 
-                { type: 'arabic', text: 'ٱلْحَمْدُ لِلّٰهِ رَبِّ الْعَالَمِينَ' },
-                { type: 'text', text: 'All praise is due to Allah Taala, Creator of all the worlds.' },
-                { type: 'hr' },
-                { type: 'arabic', text: 'وَٱلصَّلَاةُ وَٱلسَّلَامُ عَلَىٰ رَسُولِنَا مُحَمَّدٍ وَآلِهِ وَصَحْبِهِ أَجْمَعِينَ' },
-                { type: 'text', text: 'May peace and blessings be upon Prophet Muhammed ‘alayhis-salam, and on his blessed family and noble companions.' },
-                { type: 'hr' },
-                { type: 'arabic', text: 'ٱللّٰهُمَّ ٱغْفِرْ وَٱرْحَمْ وَأَنْتَ خَيْرُ ٱلرَّاحِمِينَ، تَوَفَّنِي مُسْلِمًا وَأَلْحِقْنِي بِٱلصَّالِحِينَ' },
-                { type: 'text', text: 'Oh Allah! Accept the salat that I have performed! Make my last breath be by saying Kalimat ash-Shahada and my migration to the Hereafter be with iman. Forgive and pardon my relatives that have died. Cause me to die as a Muslim and join the righteous.' },
-                { type: 'hr' },
-                { type: 'arabic', text: 'ٱللّٰهُمَّ ٱغْفِرْ لِي وَلِوَالِدَيَّ وَلِأُسْتَاذِيَّ وَلِلْمُؤْمِنِينَ وَٱلْمُؤْمِنَاتِ يَوْمَ يَقُومُ ٱلْحِسَابُ' },
-                { type: 'text', text: 'Oh Allah! Protect me from the evil of Satan, the evil of enemies and the evil of my nafs! Grant goodness, halal and auspicious sustenance to our home! Grant salvation to Muslims! Make the enemies of Muslims wretched and dispersed! With Your Divine Help, help Muslims that are making jihad against unbelievers!' },
-                { type: 'hr' },
-                { type: 'arabic', text: 'ٱللّٰهُمَّ إِنَّكَ عَفُوٌّ كَرِيمٌ تُحِبُّ ٱلْعَفْوَ فَٱعْفُ عَنِّي' },
-                { type: 'text', text: 'Oh Allah! You are the One who pardons and forgives. You love to pardon, pardon me. Grant recovery to the ill among us, grant relief to those who are with difficulties among us!' },
-                { type: 'hr' },
-                { type: 'arabic', text: 'ٱللّٰهُمَّ إِنِّي أَسْأَلُكَ ٱلصِّحَّةَ وَٱلْعَافِيَةَ وَٱلْأَمَانَةَ وَحُسْنَ ٱلْخُلُقِ وَٱلرِّضَاءَ بِٱلْقَدَرِ بِرَحْمَتِكَ يَا أَرْحَمَ ٱلرَّاحِمِينَ، آمِينَ' },
-                { type: 'text', text: 'Oh Allah! Grant a beneficial life, good morals, sound mind, afiyat and istiqama — being on the correct, true path which Allahu Taala likes — to my parents and to my children and to my relatives and to my friends and to all Muslims. Amin!' },
-                { type: 'hr' },
-                { type: 'arabic', text: 'ٱلْحَمْدُ لِلّٰهِ رَبِّ الْعَالَمِينَ، وَٱلصَّلَاةُ وَٱلسَّلَامُ عَلَىٰ سَيِّدِنَا مُحَمَّدٍ وَعَلَىٰ آلِهِ وَصَحْبِهِ أَجْمَعِينَ' },
-                { type: 'text', text: 'Closing praise and salawat as you began, repeating Alhamdulillah and Salawat upon the Prophet ﷺ.' }
-              ] 
-            } 
-          ] 
-        },
+                },
+  'p5': { 
+  id: 'p5', 
+  title: 'Prayers after Salah', 
+  cards: [ 
+    { 
+      variant: 'default', 
+      content: [ 
+        { type: 'section-title', text: 'Supplications After Salam' }, 
+        { type: 'text', text: 'After the Tashahhud and Salawat, one should make a supplication such as:' }, 
+
+        { type: 'arabic', text: 'ٱلْحَمْدُ لِلَّهِ رَبِّ ٱلْعَالَمِينَ' },
+        { type: 'text', text: 'All praise is due to Allah Ta’ala, Creator of all the worlds.' },
+
+        { type: 'arabic', text: 'وَٱلصَّلَاةُ وَٱلسَّلَامُ عَلَىٰ رَسُولِنَا مُحَمَّدٍ وَآلِهِ وَصَحْبِهِ أَجْمَعِينَ' },
+        { type: 'text', text: 'May peace and blessings be upon Prophet Muhammad ‘alayhis-salam, and on his blessed family and noble companions.' },
+
+        { type: 'section-title', text: 'Dua of Sheikh Ma’ al-Aynayn' },
+
+        { type: 'arabic', text: 'اللهُ اللهُ ۞ اللهُ رَبِّي لَا أُشْرِكُ بِهِ شَيْئًا ۞ اللَّهُمَّ إِنِّي أَسْأَلُكَ بِاسْمِكَ الْعَظِيمِ ۞ وَرِضْوَانِكَ الْأَكْبَرِ ۞ يَا ذَا الْجَلَالِ وَالْإِكْرَامِ ۞ أَنْ تَفْعَلَ بِي كَذَا (وَيَذْكُرُ حَاجَتَهُ) ۞' },
+        { type: 'text', text: 'Allah, Allah. Allah is my Rabb, I do not associate anything with Him. O Allah, I ask You by Your Great Name and Your Greatest Pleasure. O Owner of Majesty and Honor, that You do for me [such and such] (here, one mentions their specific need).' },
+
+        { type: 'arabic', text: 'وَمَنْ تَكُنْ بِرَسُولِ اللهِ نُصْرَتُهُ إِنْ تَلْقَهُ الْأُسْدُ فِي آجَامِهَا تَجِمِ (7)' },
+        { type: 'text', text: 'And whoever has the support of the Messenger of Allah, if the lions encounter him in their thickets, they become silent and speechless out of awe. (Repeat 7 times)' },
+
+        { type: 'arabic', text: 'يَا خَفِيَّ الْأَلْطَافِ نَجِّنَا مِمَّا نَخَافُ يَا حَيُّ حِينَ لَا حَيَّ فِي دَيْمُومِيَّةِ مُلْكِهِ وَبَقَائِهِ يَا حَيُّ (7)' },
+        { type: 'text', text: 'O Hidden in Subtleties, save us from what we fear. O Ever-Living One when there is no living thing in the eternity of His Sovereignty and His Permanence, O Ever-Living One. (Repeat 7 times)' },
+
+        { type: 'arabic', text: 'بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيمِ انْتَهَيْتُ لِلَّهِ ۞ بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيمِ تُبْتُ إِلَى اللهِ ۞ بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيمِ سَلَّمْتُ نَفْسِي إِلَى اللهِ ۞ بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيمِ رَضِيتُ بِاللهِ ۞ بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيمِ اعْتَصَمْتُ بِاللهِ ۞ بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيمِ فَوَّضْتُ أَمْرِي إِلَى اللهِ ۞ بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيمِ تَوَكَّلْتُ عَلَى اللهِ ۞' },
+        { type: 'text', text: 'Allah - beginning with the name of - the Most Gracious, the Most Merciful I have surrendered to Allah. Allah - beginning with the name of - the Most Gracious, the Most Merciful I have repented to Allah. Allah - beginning with the name of - the Most Gracious, the Most Merciful I have submitted myself to Allah. Allah - beginning with the name of - the Most Gracious, the Most Merciful I am pleased with Allah (as my Lord). Allah - beginning with the name of - the Most Gracious, the Most Merciful I have held fast to Allah. Allah - beginning with the name of - the Most Gracious, the Most Merciful I have entrusted my affairs to Allah. Allah - beginning with the name of - the Most Gracious, the Most Merciful I have relied upon Allah.' },
+
+        { type: 'arabic', text: 'بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيمِ وَبِاللهِ وَعَلَى اللهِ وَمِنَ اللهِ وَإِلَى اللهِ ۞ اعْتَمَدْتُ عَلَى اللهِ وَمَا تَوْفِيقِي إِلَّا بِاللهِ ۞ وَحَسْبِيَ اللهُ وَلَا إِلَهَ إِلَّا اللهُ وَاللهُ أَكْبَرُ ۞' },
+        { type: 'text', text: 'Allah - beginning with the name of - the Most Gracious, the Most Merciful and by Allah, and upon Allah, and from Allah, and to Allah. I have depended on Allah, and my success is only by Allah. Allah is sufficient for me, and there is no god but Allah, and Allah is the Greatest.' },
+
+        { type: 'arabic', text: 'بِسْمِ اللهِ عَلَى نَفْسِي وَدِينِي وَخَوَاتِمِ عَمَلِي ۞ بِسْمِ اللهِ عَلَى أَهْلِي وَوَلَدِي ۞ بِسْمِ اللهِ عَلَى مَالِي وَبِلَادِي ۞ بِسْمِ اللهِ عَلَى أَحْبَابِي وَجِيرَانِي ۞ بِسْمِ اللهِ عَلَى كُلِّ شَيْءٍ أَعْطَانِيهِ رَبِّي ۞ بِسْمِ اللهِ خَيْرِ الْأَسْمَاءِ فِي الْأَرْضِ وَالسَّمَاءِ ۞ بِسْمِ اللهِ الَّذِي فِي جَمِيعِ أَسْمَائِهِ الشِّفَاءُ ۞' },
+        { type: 'text', text: 'Allah - beginning with the name of - over myself, my religion, and the outcomes of my deeds. Allah - beginning with the name of - over my family and my children. Allah - beginning with the name of - over my wealth and my lands. Allah - beginning with the name of - over my loved ones and my neighbors. Allah - beginning with the name of - over everything my Lord has given me. Allah - beginning with the name of - the best of Names in the earth and the sky. Allah - beginning with the name of - He in all of whose Names is healing.' },
+
+        { type: 'section-title', text: 'Comprehensive Duas' },
+
+        { type: 'arabic', text: 'اللَّهُمَّ اغْفِرْلِي وَلِوَالِدَيَّ وَلِمَنْ تَوَالَدَ وَلِجَمِيعِ الْمُؤْمِنِينَ وَالْمُؤْمِنَاتِ وَالْمُسْلِمِينَ وَالْمُسْلِمَاتِ الْأَحْيَاءِ مِنْهُمْ وَالْأَمْوَاتِ إِنَّكَ مُجِيبُ الدَّعَوَاتِ بِرَحْمَتِكَ يَا أَرْحَمَ الرَّاحِمِينَ' },
+        { type: 'text', text: 'O Allah, forgive me, my parents, and all those who are born; and all the believing men and women, those who have submitted from the males and females, the living and the dead. Verily, You are the One Who answers prayers. Through Your Mercy, O the Most Merciful of those who show mercy.' },
+
+        { type: 'arabic', text: 'اللَّهُمَّ رَبِّ اجْعَلْنِي مُقِيمَ الصَّلَاةِ وَمِنْ ذُرِّيَّتِي رَبَّنَا وَتَقَبَّلْ دُعَاءِي رَبَّنَا اغْفِرْ لِي وَلِوَالِدَيَّ وَلِلْمُؤْمِنِينَ يَوْمَ يَقُومُ الْحِسَابُ' },
+        { type: 'text', text: 'O Allah, my Rab. Make me establish the prayer, and my offspring; O our Lord! Accept my prayer. O Allah! Forgive me, and my parents, and all the believers on the Day when Reckoning will take place.' },
+
+        { type: 'arabic', text: 'ٱللّٰهُمَّ ٱغْفِرْ وَٱرْحَمْ وَأَنْتَ خَيْرُ ٱلرَّاحِمِينَ، تَوَفَّنِي مُسْلِمًا وَأَلْحِقْنِي بِٱلصَّالِحِينَ' },
+        { type: 'text', text: 'Oh Allah! Accept the salat that I have performed! Forgive and pardon my relatives that have died. Cause me to die as a Muslim and join the righteous.' },
+
+        { type: 'arabic', text: 'ٱللّٰهُمَّ ٱغْفِرْ لِي وَلِوَالِدَيَّ وَلِأُسْتَاذِيَّ وَلِلْمُؤْمِنِينَ وَٱلْمُؤْمِنَاتِ يَوْمَ يَقُومُ ٱلْحِسَابُ' },
+        { type: 'text', text: 'Oh Allah! Protect me from the evil of Satan, my enemies, and my nafs! Grant goodness and auspicious sustenance to our home! Grant salvation to Muslims and help those striving against unbelievers!' },
+
+        { type: 'arabic', text: 'ٱللّٰهُمَّ إِنَّكَ عَفُوٌّ كَرِيمٌ تُحِبُّ ٱلْعَفْوَ فَٱعْفُ عَنِّي' },
+        { type: 'text', text: 'Oh Allah! You are the One who pardons and forgets. You love to pardon, so pardon me. Grant recovery to the ill among us and relief to those in difficulty.' },
+
+        { type: 'arabic', text: 'ٱللّٰهُمَّ إِنِّي أَسْأَلُكَ ٱلصِّحَّةَ وَٱلْعَافِيَةَ وَٱلْأَمَانَةَ وَحُسْنَ ٱلْخُلُقِ وَٱلرِّضَاءَ بِٱلْقَدَرِ بِرَحْمَتِكَ يَا أَرْحَمَ ٱلرَّاحِمِينَ، آمِينَ' },
+        { type: 'text', text: 'Oh Allah! Grant a beneficial life, good morals, a sound mind, and steadfastness on the true path to my parents, my children, my relatives, my friends, and to all Muslims. Amin!' },
+
+        { type: 'arabic', text: 'ٱلْحَمْدُ لِلّٰهِ رَبِّ الْعَالَمِينَ، وَٱلصَّلَاةُ وَٱلسَّلَامُ عَلَىٰ سَيِّدِنَا مُحَمَّدٍ وَعَلَىٰ آلِهِ وَصَحْبِهِ أَجْمَعِينَ' },
+        { type: 'text', text: 'Closing praise: All praise is due to Allah, and peace and blessings be upon our master Muhammad, his family, and all his companions.' }
+      ] 
+    } 
+  ] 
+},
+
         'p6': {
           id: 'p6',
           title: 'Duas when Visiting Graves',
