--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@
         { type: 'arabic', text: 'وَٱلصَّلَاةُ وَٱلسَّلَامُ عَلَىٰ رَسُولِنَا مُحَمَّدٍ وَآلِهِ وَصَحْبِهِ أَجْمَعِينَ' },
         { type: 'text', text: 'May peace and blessings be upon Prophet Muhammad ‘alayhis-salam, and on his blessed family and noble companions.' },
 
-        { type: 'section-title', text: 'Dua of Sheikh Ma’ al-Aynayn' },
+    
 
-        { type: 'arabic', text: 'اللهُ اللهُ ۞ اللهُ رَبِّي لَا أُشْرِكُ بِهِ شَيْئًا ۞ اللَّهُمَّ إِنِّي أَسْأَلُكَ بِاسْمِكَ الْعَظِيمِ ۞ وَرِضْوَانِكَ الْأَكْبَرِ ۞ يَا ذَا الْجَلَالِ وَالْإِكْرَامِ ۞ أَنْ تَفْعَلَ بِي كَذَا (وَيَذْكُرُ حَاجَتَهُ) ۞' },
+        { type: 'arabic', text: 'اللهُ اللهُ ۞ اللهُ رَبِّي لَا أُشْرِكُ بِهِ شَيْئًا ۞ اللَّهُمَّ إِنِّي أَسْأَلُكَ بِاسْمِكَ الْعَظِيمِ ۞ وَرِضْوَانِكَ الْأَكْبَرِ ۞ يَا ذَا الْجَلَالِ وَالْإِكْرَامِ ۞ أَنْ تَفْعَلَ بِي كَذَا  ۞' },
         { type: 'text', text: 'Allah, Allah. Allah is my Rabb, I do not associate anything with Him. O Allah, I ask You by Your Great Name and Your Greatest Pleasure. O Owner of Majesty and Honor, that You do for me [such and such] (here, one mentions their specific need).' },
 
         { type: 'arabic', text: 'وَمَنْ تَكُنْ بِرَسُولِ اللهِ نُصْرَتُهُ إِنْ تَلْقَهُ الْأُسْدُ فِي آجَامِهَا تَجِمِ (7)' },
