--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         { a: "مَا يَنۡظُرُوۡنَ اِلَّا صَيۡحَةً وَّاحِدَةً تَاۡخُذُهُمۡ وَهُمۡ يَخِصِّمُوۡنَ", e: "They await just one scream, which will overcome them while they are involved in worldly disputes." },
         { a: "فَلَا يَسۡتَطِيۡعُوۡنَ تَوۡصِيَةً وَّلَاۤ اِلٰٓى اَهۡلِهِمۡ يَرۡجِعُوۡنَ", e: "Therefore neither able to make a will, nor returning to their homes." },
         { a: "وَنُفِخَ فِى الصُّوۡرِ فَاِذَا هُمۡ مِّنَ الۡاَجۡدَاثِ اِلٰى رَبِّهِمۡ يَنۡسِلُوۡنَ", e: "And the Trumpet will be blown - so they will come forth from the graves, running towards their Lord." },
-        { a: "قَالُوۡا يٰوَيۡلَنَا مَنۡۢ بَعَثَنَا مِنۡ مَّرۡقَدِنَاۘؔ؄هٰذَا مَا وَعَدَ الرَّحۡمٰنُ وَصَدَقَ الۡمُرۡسَلُوۡنَ", e: "Saying, “O our misfortune! Who has raised us from our sleep? This is what the Most Gracious had promised, and the Noble Messengers had spoken the truth!”" },
+        { a: "قَالُوۡا يٰوَيۡلَنَا مَنۡۢ بَعَثَنَا مِنۡ مَّرۡقَدِنَاۘؔ هٰذَا مَا وَعَدَ الرَّحۡمٰنُ وَصَدَقَ الۡمُرۡسَلُوۡنَ", e: "Saying, “O our misfortune! Who has raised us from our sleep? This is what the Most Gracious had promised, and the Noble Messengers had spoken the truth!”" },
         { a: "اِنۡ كَانَتۡ اِلَّا صَيۡحَةً وَّاحِدَةً فَاِذَا هُمۡ جَمِيۡعٌ لَّدَيۡنَا مُحۡضَرُوۡنَ", e: "It is just one scream, and every one of them will be brought together before Us!" },
         { a: "فَالۡيَوۡمَ لَا تُظۡلَمُ نَفۡسٌ شَيۡـــًٔا وَّلَا تُجۡزَوۡنَ اِلَّا مَا كُنۡتُمۡ تَعۡمَلُوۡنَ", e: "So this day no soul will be wronged in the least; and you will not be compensated except for your deeds." },
         { a: "اِنَّ اَصۡحٰبَ الۡجَـنَّةِ الۡيَوۡمَ فِىۡ شُغُلٍ فٰكِهُوۡنَ", e: "Indeed this day the dwellers of Paradise are in comfort, with blissful hearts." },
