--- a/index.html
+++ b/index.html
@@ -20,40 +20,54 @@ Update check 2 last
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-    /* 1. THE LOGO FIX: Fits "QALB-E-DUA" on one line on all iPhones. */
-    /* No 'nowrap' used here, so sub-page titles will NOT be cut off. */
-    .font-heading { 
-        font-family: 'Cinzel', serif; 
-        font-size: 22px !important; 
-        line-height: 1.2 !important;
-        text-align: center !important;
+    /* 1. FIX THE OVERLAP WITH THE CLOCK */
+    /* This ensures headers never touch the iPhone status bar icons */
+    header, .header-container, #root > div > div:first-child {
+        padding-top: env(safe-area-inset-top) !important;
+        min-height: calc(60px + env(safe-area-inset-top)) !important;
+        display: flex !important;
+        flex-direction: column !important;
+        justify-content: center !important;
     }
 
-    /* 2. THE FLASHING FIX: Stops blue light/flashing when pressing buttons. */
-    button, a, [role="button"], .menu-item {
+    /* 2. FIX THE TITLES (LOGO VS INTERNAL PAGES) */
+    .font-heading { 
+        font-family: 'Cinzel', serif; 
+        line-height: 1.2 !important;
+    }
+
+    /* Target ONLY the main "QALB-E-DUA" logo to stay on one line */
+    #root > div > div:first-child .font-heading {
+        white-space: nowrap !important;
+        font-size: 22px !important;
+    }
+
+    /* ALLOW other page titles like "PRAYERS OF THE PROPHET" to wrap naturally */
+    /* This stops the "..." cut off problem in your picture */
+    header .font-heading, .title-container .font-heading {
+        white-space: normal !important;
+        font-size: 1.2rem !important;
+        width: 90% !important;
+        margin: 0 auto !important;
+    }
+
+    /* 3. STOP THE BLUE FLASHING WHEN PRESSING BUTTONS */
+    * {
         -webkit-tap-highlight-color: transparent !important;
         outline: none !important;
     }
 
-    /* 3. THE SCROLLBAR & TOP GAP FIX: Kept exactly as you had them. */
-    ::-webkit-scrollbar { 
-        display: none !important; 
-    }
+    /* 4. HIDE SCROLLBAR & STOP WHITE GAP */
+    ::-webkit-scrollbar { display: none !important; }
     html, body { 
         overscroll-behavior-y: none; 
-        background-color: #030e26; 
+        background-color: #030e26 !important; 
         scrollbar-width: none !important;
         margin: 0;
         padding: 0;
     }
 
-    body { 
-        transition: background-color 0.3s; 
-        overflow-x: hidden; 
-        padding-top: env(safe-area-inset-top); 
-    }
-
-    /* 4. YOUR ORIGINAL STYLES: No changes here. */
+    /* 5. YOUR ORIGINAL STYLES */
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
