--- a/index.html
+++ b/index.html
@@ -19,44 +19,40 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 <style>
-    /* 1. FIX THE OVERLAP WITH THE CLOCK */
-    /* This ensures headers never touch the iPhone status bar icons */
-    header, .header-container, #root > div > div:first-child {
-        padding-top: env(safe-area-inset-top) !important;
-        min-height: calc(60px + env(safe-area-inset-top)) !important;
-        display: flex !important;
-        flex-direction: column !important;
-        justify-content: center !important;
-    }
-
-    /* 2. FIX THE TITLES (LOGO VS INTERNAL PAGES) */
+    /* 1. FIX THE TITLES: Stops "..." and shows the full name */
     .font-heading { 
         font-family: 'Cinzel', serif; 
         line-height: 1.2 !important;
+        /* This removes the "..." and allows the text to wrap to a 2nd line */
+        white-space: normal !important; 
+        overflow: visible !important;
+        text-overflow: clip !important;
     }
 
-    /* Target ONLY the main "QALB-E-DUA" logo to stay on one line */
+    /* 2. SPECIAL RULE FOR MAIN LOGO ONLY: Keep "QALB-E-DUA" on one line */
+    /* This targets the logo on the first page so it looks perfect */
     #root > div > div:first-child .font-heading {
         white-space: nowrap !important;
         font-size: 22px !important;
     }
 
-    /* ALLOW other page titles like "PRAYERS OF THE PROPHET" to wrap naturally */
-    /* This stops the "..." cut off problem in your picture */
-    header .font-heading, .title-container .font-heading {
-        white-space: normal !important;
-        font-size: 1.2rem !important;
-        width: 90% !important;
+    /* 3. SUB-PAGE HEADER FIX: Ensures titles like "Morning & Evening" fit */
+    header .font-heading, 
+    nav .font-heading,
+    .header-title {
+        font-size: 1.1rem !important; /* Slightly smaller so more fits */
+        max-width: 70% !important;   /* Centers it between the icons */
         margin: 0 auto !important;
+        text-align: center !important;
     }
 
-    /* 3. STOP THE BLUE FLASHING WHEN PRESSING BUTTONS */
+    /* 4. STOP BLUE FLASHING WHEN PRESSING BUTTONS */
     * {
         -webkit-tap-highlight-color: transparent !important;
         outline: none !important;
     }
 
-    /* 4. HIDE SCROLLBAR & STOP WHITE GAP */
+    /* 5. HIDE SCROLLBAR & STOP WHITE GAP */
     ::-webkit-scrollbar { display: none !important; }
     html, body { 
         overscroll-behavior-y: none; 
@@ -66,7 +62,12 @@
         padding: 0;
     }
 
-    /* 5. YOUR ORIGINAL STYLES */
+    /* 6. PUSH CONTENT DOWN FROM CLOCK */
+    header, .header-container {
+        padding-top: env(safe-area-inset-top) !important;
+    }
+
+    /* 7. ORIGINAL STYLES */
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
